cambios de sass

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sass",
+  "name": "mercadolibrecrypto-sass-melitadavid",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/style.scss css/main.css",
+    "build-css": "node-sass --include-path scss scss/styles.scss css/main.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "author": "",
